--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -14,7 +14,7 @@
 .icon-svg {
   background: $background-white;
   padding: $padding-regular;
-  height: 40px;
+  height: 30px;
   border-radius: $border-radius-circle;
 }
 
