--- a/src/app/score/score.component.scss
+++ b/src/app/score/score.component.scss
@@ -14,12 +14,12 @@
 }
 
 .game-logo-wrapper {
-  height: 75px;
+  height: 50px;
 }
 
 .score-wrapper {
-  height: 90px;
-  width: 90px;
+  height: 80px;
+  width: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
